# agentic_lab

./: .gitignore  .mcp.json  ARCHITECTURE-FEEDBACK.md  BARE_METAL_INSTALL.md  CLAUDE.md  CURRENT_STATUS.md  DEPLOYMENT-WORKFLOW.md  ENVIRONMENT_VARIABLES.md  FRESH_DEPLOYMENT_CHECKLIST.md  GITOPS-WORKFLOW.md  PHASES.md  README.md  agentic_lab  renovate.json
.claude/: settings.json
.claude/commands/: agentic-status.md  gemini-activity.md  review-pending.md  runbook-coverage.md  world-updates.md
.claude/context/: latest.md
.gemini/: SYSTEM.md
.github/workflows/: build-a2a-orchestrator.yaml  build-discovery-service.yaml  build-fumadocs.yaml  build-mcp-servers.yaml
a2a-orchestrator/: Dockerfile  README.md
archive/retired-cloud-llm/: README.md
discovery_service/: Dockerfile  README.md  pyproject.toml
discovery_service/src/discovery_service/: __init__.py  config.py  main.py
discovery_service/src/discovery_service/api/: proxmox.py  truenas.py
discovery_service/src/discovery_service/graph/: client.py  lifecycle.py
discovery_service/src/discovery_service/kube/: client.py
discovery_service/src/discovery_service/mcp/: client.py
discovery_service/src/discovery_service/sources/: homelab.py  knowledge.py  kubernetes.py  media.py  network.py  observability.py  proxmox.py  truenas.py
docs/: FOREVER-LEARNING-SYSTEM.md  PROJECT-05-STATUS.md  a2a-specialist-agents.md  architecture-diagram-hitl.md  architecture-diagram.mermaid  cloud-only-architecture-doc.md  cloud-only-updated.md  cloud-only-updates.md  infisical-migration-plan.md  infisical-structure.md  mcp-development-guide.md  mcp-remediation-plan.md  multi-model-strategy.md  network-discovery-graph-db-analysis.md  nodeport-registry.md  outline-silverbullet-sync.md  qdrant-agent-communication.md  routing-flow-telegram.mermaid  routing-flow.mermaid  signal-to-telegram-migration.md  telegram-architecture.md  tools-reference.md  unified-architecture-updated.md  unified-architecture.md
docs/audits/: 2026-01-15-ecosystem-audit.md  project-3-review-findings.md
docs/knowledge-base/: argocd-patterns.md  domain-routing.md  homelab-architecture.md  mcp-deployment-pattern.md
docs/lessons-learned/: 2026-01-14-comprehensive-monitoring.md
fabric/: README.md
fabric/patterns/: deploy_application.md  health_check.md  incident_response.md  investigate_alert.md
fumadocs/: .gitignore  .rebuild  Dockerfile  next.config.mjs  package.json  tailwind.config.ts
fumadocs/app/: globals.css  layout.tsx  page.tsx
fumadocs/lib/: neo4j.ts  qdrant.ts
kubernetes/argocd-apps/: README.md  a2a-app.yaml  alert-forwarder-app.yaml  alerting-pipeline-app.yaml  backrest-app.yaml  cert-manager-app.yaml  cilium-app.yaml  cilium-lb-app.yaml  claude-agent-app.yaml  claude-refresh.yaml  claude-validator-app.yaml  discovery-app.yaml  domain-mcps.yaml  error-hunter-app.yaml  estate-triage-app.yaml  fumadocs-app.yaml  gemini-agent-app.yaml  graph-enrichment-app.yaml  incident-db-app.yaml  infisical-operator-app.yaml  investmentology-api-app.yaml  keep-app.yaml  kernow-hub-app.yaml  langgraph-app.yaml  litellm-app.yaml  local-path-provisioner-app.yaml  mapbot-research-app.yaml  matrix-app.yaml  matrix-bot-app.yaml  mcp-config-sync.yaml  mcp-servers-app.yaml  neo4j-app.yaml  neodash-app.yaml  netbox-app.yaml  nodeport-services-app.yaml  ollama-app.yaml  openwebui-app.yaml  outline-app.yaml  pattern-detector-app.yaml  postgresql-app.yaml  (+13 more)
mcp-servers/adguard/: Dockerfile  pyproject.toml
mcp-servers/arr-suite/: pyproject.toml
mcp-servers/arr-suite/src/: __init__.py  main.py
mcp-servers/browser-automation/: Dockerfile  pyproject.toml
mcp-servers/browser-automation/src/: __init__.py  main.py
mcp-servers/cloudflare/: pyproject.toml
mcp-servers/cloudflare/src/: main.py
mcp-servers/coroot/: Dockerfile  pyproject.toml
mcp-servers/coroot/src/: __init__.py  main.py
mcp-servers/home-assistant/: pyproject.toml
mcp-servers/homepage/: Dockerfile  pyproject.toml
mcp-servers/infisical-mcp/: pyproject.toml
mcp-servers/infrastructure/: Dockerfile  pyproject.toml
mcp-servers/infrastructure/src/: __init__.py  main.py
mcp-servers/knowledge/: Dockerfile  pyproject.toml
mcp-servers/knowledge/src/: __init__.py  main.py
mcp-servers/neo4j/: pyproject.toml
mcp-servers/neo4j/src/: main.py
mcp-servers/opnsense/: pyproject.toml
mcp-servers/proxmox/: pyproject.toml
mcp-servers/proxmox/src/: main.py
mcp-servers/tasmota/: pyproject.toml
mcp-servers/web-search/: Dockerfile  pyproject.toml
mcp-servers/web-search/src/: __init__.py  main.py
plans/: README.md
scripts/: index-knowledge-base.py  init_plans_collection.py  matrix-setup.sh  sync-all-agent-configs.sh  sync-mcp-config.sh  test-alert.sh  verify-deployment.sh
(+491 files in other folders)
