[project]
name = "browser-automation-mcp"
version = "0.1.0"
description = "MCP server for browser automation using Playwright"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.7.0",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "uvicorn>=0.34.0",
    "starlette>=0.40.0",
    "playwright>=1.49.0",
]

[project.scripts]
browser-automation-mcp = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
