[project]
name = "cloudflare-mcp"
version = "0.1.0"
description = "MCP server for cloudflare management"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
run = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
