[project]
name = "neo4j-mcp"
version = "0.1.0"
description = "MCP server for Neo4j knowledge graph operations"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.3.0",
    "httpx>=0.27.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
