[project]
name = "proxmox-mcp"
version = "0.1.0"
description = "MCP server for Proxmox VE management"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
proxmox-mcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
