[project]
name = "web-search-mcp"
version = "0.1.0"
description = "MCP server for web search using self-hosted SearXNG"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.7.0",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "uvicorn>=0.34.0",
    "starlette>=0.40.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "lxml>=5.0.0",
]

[project.scripts]
web-search-mcp = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
